@@ -3,7 +3,9 @@
   CR: Platform: Optimization when detaching / process termination
       Killing of processes can be blocked by system protection.
       It is tried up to three times and then ignored. 
-  CR: Platform: Integrated settings as a core component    
+  CR: Platform: Integrated settings as a core component
+      The key values of the settings are part of the environment variables of
+      the virtual environment.
 
 3.1.0 20220401
   BF: Platform: Correction of settings template synchronization
